--- a/style.css
+++ b/style.css
@@ -203,8 +203,8 @@ a {
     line-height: 25px;
     letter-spacing: -0.138462px;
     color: #36536B;
-} 
- 
+}
+
 .main__wrapper-subtitle {
     font-family: 'Public Sans';
     font-style: normal;
@@ -215,47 +215,47 @@ a {
     letter-spacing: -0.115385px;
     color: #6C8294;
     width: 350px;
-} 
- 
+}
+
 .main__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
-} 
- 
+}
+
 .main__wrapper-group {
     display: flex;
     flex-direction: column;
     align-items: center;
- 
-} 
- 
+
+}
+
 .main__wrapper-group-img {
     width: 106px;
     height: 106px;
-} 
- 
+}
+
 footer {
     width: 100%;
     height: 100px;
     background-color: #1B262F;
     display: flex;
     align-items: center;
-} 
- 
+}
+
 .footer__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-} 
- 
+}
+
 .footer__wrapper-ul {
     display: flex;
     align-items: center;
     gap: 10px;
- 
-} 
- 
+
+}
+
 .footer__wrapper-li {
     font-family: 'Public Sans';
     font-style: normal;
@@ -266,8 +266,8 @@ footer {
     mix-blend-mode: normal;
     opacity: 0.7;
     color: #FBFCFE;
-} 
- 
+}
+
 @media screen and (max-width: 600px) {
     * {
         padding: 0;
@@ -660,6 +660,79 @@ footer {
         margin-top: 24px;
     }
 
+
+    .main__wrapper-title {
+        font-family: 'Public Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
+        letter-spacing: -0.138462px;
+        color: #36536B;
+    }
+
+    .main__wrapper-subtitle {
+        font-family: 'Public Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 25px;
+        text-align: center;
+        letter-spacing: -0.115385px;
+        color: #6C8294;
+        width: 350px;
+    }
+
+    .main__wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .main__wrapper-group {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .main__wrapper-group-img {
+        width: 88px;
+        height: 88px;
+    }
+
+    footer {
+        width: 100%;
+        height: 100px;
+        background-color: #1B262F;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .footer__wrapper-ul {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+    }
+
+    .footer__wrapper-li {
+        font-family: 'Public Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 18px;
+        color: #FBFCFE;
+        mix-blend-mode: normal;
+        opacity: 0.7;
+        color: #FBFCFE;
+    }
 
 
 }
